prevent text wrap inside dropdown menus

--- a/client/homebrew/editor/snippetbar/snippetbar.less
+++ b/client/homebrew/editor/snippetbar/snippetbar.less
@@ -105,6 +105,7 @@
 			margin-left      : -5px;
 			padding          : 0px;
 			background-color : #ddd;
+			white-space      : nowrap;
 			.snippet{
 				.animate(background-color);
 				padding   : 5px;
